# vrender_webgpu

./: .gitignore  package.json  vite.config.js
cpp/: CMakeLists.txt  README.md
cpp/src/: CMakeLists.txt
cpp/src/bridge/: CMakeLists.txt  glfw3webgpu.cpp  test.cpp  webgpu-utils.cpp  webgpu-utils.h
cpp/src/core/: Bounds.cpp  CMakeLists.txt  main.cpp
cpp/src/core/graphic/: PipelineState.cpp  PipelineStateManager.cpp  Shader.cpp
cpp/src/core/graphic/includes/: GraphicsManager.hpp  PipelineState.hpp  PipelineStateManager.hpp  Shader.hpp
cpp/src/core/includes/: Bounds.hpp  IWindow.hpp  Struct.hpp
cpp/src/core/manager/: PipelineStateManager.cpp
cpp/src/core/manager/includes/: GraphicsManager.hpp  PipelineStateManager.hpp
cpp/src/platform/: CMakeLists.txt
cpp/src/platform/browser/: CMakeLists.txt  Window.cpp  bridge.cpp  library.js  post.js
cpp/src/platform/browser/includes/: Window.hpp
cpp/src/rhi/: CMakeLists.txt
cpp/src/rhi/opengl/: CMakeLists.txt  OpenGLGraphicsManager.cpp  OpenGLPipelineStateManager.cpp  OpenGLShader.cpp
cpp/src/rhi/opengl/includes/: OpenGLGraphicsManager.hpp  OpenGLPipelineStateManager.hpp  OpenGLShader.hpp
cpp/src/rhi/webgpu/: CMakeLists.txt  WGCommandBuffer.cpp  WGCommandQueue.cpp  WGDevice.cpp  WGRenderPass.cpp  WGSurface.cpp  WGTexture.cpp  WebGPUCommandBuffer.cpp  WebGPUCommandQueue.cpp  WebGPUDevice.cpp  WebGPUGraphicsManager.cpp  WebGPUPipelineStateManager.cpp  WebGPURenderPass.cpp  WebGPUSurface.cpp
cpp/src/rhi/webgpu/includes/: WGCommandBuffer.hpp  WGCommandQueue.hpp  WGDevice.hpp  WGRenderPass.hpp  WGSurface.hpp  WGTexture.hpp  WebGPUCommandBuffer.hpp  WebGPUCommandQueue.hpp  WebGPUDevice.hpp  WebGPUGraphicsManager.hpp  WebGPUPipelineStateManager.hpp  WebGPURenderPass.hpp  WebGPUSurface.hpp
cpp/src/utils/: CMakeLists.txt  Tools.cpp
cpp/src/utils/includes/: Bezier.hpp  Constants.hpp  Matrix.hpp  Output.hpp  Tools.hpp  Vector.hpp
lib/: main.ts
lib/wasm/: vrender_webgpu.js  vrender_webgpu.wasm
src/: main.ts
